# Checkr-Token-Presale-Contract

./: README.md
checkr-sale/: Cargo.toml  erdpy.json
checkr-sale/abi/: Cargo.toml
checkr-sale/abi/src/: main.rs
checkr-sale/interaction/: snippets.sh
checkr-sale/src/: checkr_sale.rs
checkr-sale/wasm/: Cargo.toml
checkr-sale/wasm/src/: lib.rs
