[package]
name = "checkr-sale"
version = "0.0.2"
authors = [ "checkr token",]
edition = "2021"
publish = false

[lib]
path = "src/checkr_sale.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.elrond-wasm]
version = "0.18.2"
features = ["derive"]

[dependencies.elrond-wasm-node]
version = "0.18.2"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.18.2"
